# encore

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  codama.json  package-lock.json  package.json
app/: index.html  package-lock.json  package.json  tsconfig.app.json
app/scripts/: create-codama-client.ts
app/src/: App.css  App.tsx  index.css  main.tsx
docs/: client_itegration.md
docs/issues/: 001_event_manager_instruction.md  002_ticket_minting.md  003_ticket_transfer.md  004_double_spend_test.md  005_poseidon_hash.md  006_batch_minting.md  007_simplify_event_config.md  008_privacy_refactor.md  008_rust_unit_tests.md  009_commitment_nullifier_model.md  009_ts_integration_tests.md  010_marketplace_listing.md  011_escrow.md  011_privacy_cash_integration.md  012_ui_services.md  013_ui_events_mint.md  014_ui_my_tickets.md  015_ui_marketplace.md  016_codama_migration.md  017_cancel_claim.md  018_ui_escrow.md
docs/milestones/: event_manager_plan.md  (+3 more)
programs/encore/: Cargo.toml
programs/encore/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/encore/src/instructions/: event_create.rs  event_update.rs  listing_cancel.rs  listing_cancel_claim.rs  listing_claim.rs  listing_close.rs  listing_complete.rs  listing_create.rs  listing_release.rs  listing_seller_cancel_claim.rs  mod.rs  ticket_mint.rs  ticket_transfer.rs
programs/encore/src/state/: event_config.rs  identity_counter.rs  listing.rs  mod.rs  nullifier.rs  ticket.rs
programs/encore/tests/: integration.rs  marketplace.rs
tests/: encore.ts  marketplace-roundtrip.ts
(+44 files in other folders)
