[package]
name = "encore"
version = "0.1.0"
description = "Private ZK Ticketing System on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "encore"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.17", features = ["anchor", "v2"] }
light-hasher = { version = "5.0.0", features = ["solana"] }
light-sdk-types = { version = "0.17.1", features = ["anchor", "v2"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

[dev-dependencies]
light-client = "0.17.2"
light-program-test = { version = "0.17.1", features = ["v2"] }
tokio = "1.36.0"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
